--- a/CRM1/views/back/article_categoryEdit.ejs
+++ b/CRM1/views/back/article_categoryEdit.ejs
@@ -10,14 +10,14 @@
       <tr>
        <td width="80" align="right">Project leader</td>
        <td>
-        <input id="cat_name" type="text" name="cat_name" value="<%= categoryA.cat_name %>" size="40" class="inpMain"  />
+        <input id="cat_name" type="text" name="cat_name" value="<%= categoryA.cat_name.leader %>" size="40" class="inpMain"  />
         <input id="_id" name="_id" type="hidden" value="<%= categoryA._id %>">
        </td>
       </tr>
       <tr>
        <td align="right">Project name</td>
        <td>
-        <input id="unique_id" type="text" name="unique_id" value="<%= categoryA.unique_id %>" size="40" class="inpMain" />
+        <input id="unique_id" type="text" name="unique_id" value="<%= categoryA.unique_id.title %>" size="40" class="inpMain" />
        </td>
       </tr>
       <tr>
