--- a/CRM1/views/back/product_categoryAdd.ejs
+++ b/CRM1/views/back/product_categoryAdd.ejs
@@ -2,30 +2,30 @@
 <%- include left_nav.ejs %>
 <div id="dcMain">
     
-<div id="urHere">Management System<b>></b><strong>销售信息</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-            <h3><a href="/admin/categoryP" class="actionBtn">销售信息</a>添加</h3>
+<div id="urHere">Management System<b>></b><strong>Others</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+            <h3><a href="/admin/categoryP" class="actionBtn">Others</a>Add New</h3>
     <form action="product_category.php?rec=insert" method="post">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
       <tr>
-       <td width="80" align="right">联系人</td>
+       <td width="80" align="right">Contact person</td>
        <td>
         <input type="text" name="cat_name" value="" size="40" class="inpMain" />
        </td>
       </tr>
       <tr>
-       <td align="right">客户量</td>
+       <td align="right">Customer volume</td>
        <td>
         <input type="text" name="unique_id" value="" size="40" class="inpMain" />
        </td>
       </tr>
       <tr>
-       <td align="right">所属部门</td>
+       <td align="right">Department</td>
        <td>
         <input type="text" name="description" size="5" class="inpMain" />
        </td>
       </tr>
       <tr>
-       <td align="right">销售业绩</td>
+       <td align="right">ToDo</td>
        <td>
         <input type="text" name="sort" size="5" class="inpMain" />
        </td>
