--- a/CRM1/views/index.ejs
+++ b/CRM1/views/index.ejs
@@ -29,7 +29,7 @@
     <ul class="navRight">
      <li class="M noLeft"><a href="JavaScript:void(0);">Hello，hyj</a>
       <div class="drop mUser">
-       <a href="manager.php?rec=edit&id=1">编辑我的个人资料</a>
+       <a href="manager.php?rec=edit&id=1">Edit我的个人资料</a>
        <a href="manager.php?rec=cloud_account">设置云账户</a>
       </div>
      </li>
@@ -56,7 +56,7 @@
    </ul>
    <ul class="bot">
     <li><a href="/admin/manager"><i class="manager"></i><em>网站管理员</em></a></li>
-    &lt;!&ndash;<li><a href="/manager.php?rec=manager_log"><i class="managerLog"></i><em>操作记录</em></a></li>&ndash;&gt;
+    &lt;!&ndash;<li><a href="/manager.php?rec=manager_log"><i class="managerLog"></i><em>Operate记录</em></a></li>&ndash;&gt;
    </ul>
   </div></div>
 
@@ -131,7 +131,7 @@
        <table width="100%" border="0" cellspacing="0" cellpadding="7" class="tableBasic">
         <tr>
          <th width="45%">IP地址</th>
-         <th width="55%">操作时间</th>
+         <th width="55%">Operate时间</th>
         </tr>
         <tr>
          <td align="center">127.0.0.1</td>
