--- a/CRM1/views/back/left_nav.ejs
+++ b/CRM1/views/back/left_nav.ejs
@@ -11,8 +11,8 @@
             <li  class="animated bounceInUp light"><a href="/admin/categoryA"><i class="articleCat"></i><em>Project Progress</em></a></li>
         </ul>
         <ul>
-            <li  class="animated bounceInUp light"><a href="/admin/categoryP"><i class="productCat"></i><em>销售信息</em></a></li>
-            <li  class="animated bounceInUp light"><a href="/admin/products"><i class="product"></i><em>销售管理</em></a></li>
+            <li  class="animated bounceInUp light"><a href="/admin/categoryP"><i class="productCat"></i><em>Others</em></a></li>
+            <li  class="animated bounceInUp light"><a href="/admin/products"><i class="product"></i><em>Customer Management</em></a></li>
         </ul>
         
         <ul class="bot">
