--- a/CRM1/views/back/login.ejs
+++ b/CRM1/views/back/login.ejs
@@ -25,7 +25,7 @@
                     <input  id="u" name="username" type="text" placeholder="username">
                     <span class="title">PASSWORD</span>
                     <input  id="p" name="password" type="password"  placeholder="password">
-                    <input id="submit" type="button" name="submit" value="登录">
+                    <input id="submit" type="button" name="submit" value="Sign in">
                 </form>
             </div>
         </div>
