--- a/CRM1/views/back/navs.ejs
+++ b/CRM1/views/back/navs.ejs
@@ -2,23 +2,23 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
     
-<div id="urHere">Management System<b>></b><strong>公告栏</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-    <h3><a href="/admin/navsAdd" class="actionBtn">添加公告</a>公告栏</h3>
+<div id="urHere">Management System<b>></b><strong>Bulletin Board</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+    <h3><a href="/admin/navsAdd" class="actionBtn">Add New</a>Bulletin Board</h3>
         <div class="navList">
      <ul class="tab">
-      <li><a href="#" class="selected">公告 </a></li>
+      <li><a href="#" class="selected">Bulletin Board </a></li>
      </ul>
      <table width="100%" border="0" cellpadding="10" cellspacing="0" class="tableBasic">
         <tr>
-         <th width="350" align="center">公告名称</th>
-         <th align="center">具体内容</th>
-         <th width="80" align="center">操作</th>
+         <th width="350" align="center">Announcement name</th>
+         <th align="center">Specific contents</th>
+         <th width="80" align="center">Operate</th>
         </tr>
         <% for(var i=0;i<navs.length;i++){ %>
         <tr>
          <td align="center"> <%= navs[i].title %></td>
          <td align="center"><%= navs[i].content %></td>
-         <td align="center"><a href="/admin/Ndelete?title=<%= navs[i].title %>">删除</a></td>
+         <td align="center"><a href="/admin/Ndelete?title=<%= navs[i].title %>">Delete</a></td>
         </tr>
       <% } %>
       </table>
