--- a/CRM1/views/back/navsAdd.ejs
+++ b/CRM1/views/back/navsAdd.ejs
@@ -2,28 +2,28 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
     
-    <div id="urHere">客户关系后台管理中心<b>></b><strong>自定义导航栏</strong> </div>
+    <div id="urHere">Management System<b>></b><strong>Bulletin Board</strong> </div>
      <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-        <h3><a href="/admin/navs" class="actionBtn">返回列表</a>自定义导航栏</h3>
+        <h3><a href="/admin/navs" class="actionBtn">Back</a>Bulletin Board</h3>
     <!--<script type="text/javascript">-->
      <!--$(function(){ $(".idTabs").idTabs(); });-->
     <!--</script>-->
     <div class="idTabs">
       <ul class="tab">
-        <li><a href="#nav_add">添加公告内容</a></li>
+        <li><a href="#nav_add">Add New</a></li>
       </ul>
       <div class="items">
         <div id="nav_add">
          <form method="post">
           <table width="100%" border="0" cellpadding="5" cellspacing="1" class="tableBasic">
            <tr>
-            <td width="80" height="35" align="right">公告名称</td>
+            <td width="80" height="35" align="right">Announcement name</td>
             <td>
              <input type="text" id="nav_name" name="title" value="" size="40" class="inpMain" />
             </td>
            </tr>
            <tr>
-            <td height="35" align="right" name="content">内容</td>
+            <td height="35" align="right" name="content">Specific contents</td>
             <td>
                 <textarea name="content" cols="60" rows="4" class="textArea"></textarea>
             </td>
