--- a/CRM1/views/back/article_categoryAdd.ejs
+++ b/CRM1/views/back/article_categoryAdd.ejs
@@ -2,9 +2,9 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
     
-<div id="urHere">Management System<b>></b><strong>Project Progress</strong> </div>
+<div id="urHere">Management System<b>></b><strong>Project Feedback</strong> </div>
   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-      <h3><a href="/admin/categoryA" class="actionBtn">Project Progress</a>Add New</h3>
+      <h3><a href="/admin/categoryA" class="actionBtn">Project Feedback</a>Add New</h3>
     <form action="article_category.php?rec=insert" method="post">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
       <tr>
@@ -12,7 +12,7 @@
        <td>
         <!-- <input type="text" name="cat_name" value="" size="40" class="inpMain"  /> -->
         <select name="cat_name">
-          <option value="0">-请选择-</option>
+          <option value="0">-Choose-</option>
           <% for(var i=0;i<articles.length;i++){ %>
           <option  value='<%= articles[i]._id %>'><%= articles[i].leader %></option>
           <% } %>
@@ -24,7 +24,7 @@
        <td>
         <!-- <input type="text" name="unique_id" value="" size="40" class="inpMain" /> -->
         <select name="unique_id">
-          <option value="0">未分类</option>
+          <option value="0">-Choose-</option>
           <% for(var j=0;j<articles.length;j++){ %>
           <option value='<%= articles[j]._id %>'><%= articles[j].title %></option>
           <% } %>
@@ -54,7 +54,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-  West Ham United Foundation Project
+  
   </ul>
  </div>
 </div>  
