--- a/CRM1/views/back/article_categoryEdit.ejs
+++ b/CRM1/views/back/article_categoryEdit.ejs
@@ -2,9 +2,9 @@
 <%- include left_nav.ejs %>
  <div id="dcMain">
     
-<div id="urHere">Management System<b>></b><strong>Project Progress</strong> </div>
+<div id="urHere">Management System<b>></b><strong>Project Feedback</strong> </div>
   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-   <h3><a href="/admin/categoryA" class="actionBtn">Project Progress</a>Add New</h3>
+   <h3><a href="/admin/categoryA" class="actionBtn">Project Feedback</a>Add New</h3>
     <form action="" method="post">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
       <tr>
@@ -43,7 +43,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-  West Ham United Foundation Project
+  
   </ul>
  </div>
 </div>  
