--- a/CRM1/views/back/header.ejs
+++ b/CRM1/views/back/header.ejs
@@ -19,12 +19,9 @@
 <body>
 <div id="dcWrap"> <div id="dcHead">
         <div id="head">
-            <div class="logo" style="color: #fff;font-size: 16px ;padding-top:5px">Menu</div>
+            <div class="logo" style="color: #fff;font-size: 16px ;padding-top:5px"> Management System</div>
             <div class="nav">
                 <ul class="navRight">
-                    <ul>
-                        <li>West Ham United Foundation Project Management System</li>
-                    </ul>
                     <li class="noLeft"><a href="JavaScript:void(0);" id="names">Hello</a>
                     </li>
                     <li class="noRight"><a href="/admin/login">Sign out</a></li>
