--- a/CRM1/views/back/left_nav.ejs
+++ b/CRM1/views/back/left_nav.ejs
@@ -1,6 +1,6 @@
 <div id="dcLeft">
     <div id="menu">
-        <ul class="top">
+        <ul >
             <li  class="animated bounceInUp light"><a href="/admin"><i class="home"></i><em>Home</em></a></li>
         </ul>
         <ul>
@@ -8,10 +8,10 @@
         </ul>
         <ul>
             <li  class="animated bounceInUp light"><a href="/admin/articles"><i class="article"></i><em>Project Management</em></a></li>
-            <li  class="animated bounceInUp light"><a href="/admin/categoryA"><i class="articleCat"></i><em>Project Progress</em></a></li>
+            <li  class="animated bounceInUp light"><a href="/admin/categoryA"><i class="articleCat"></i><em>Project Feedback</em></a></li>
         </ul>
         <ul>
-            <li  class="animated bounceInUp light"><a href="/admin/categoryP"><i class="productCat"></i><em>Others</em></a></li>
+            <li  class="animated bounceInUp light"><a href="/admin/categoryP"><i class="productCat"></i><em>Customer</em></a></li>
             <li  class="animated bounceInUp light"><a href="/admin/products"><i class="product"></i><em>Customer Management</em></a></li>
         </ul>
         
