--- a/CRM1/views/back/navs.ejs
+++ b/CRM1/views/back/navs.ejs
@@ -30,7 +30,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-     West Ham United Foundation Project
+   © 1895 - 2019 West Ham United Football Club
   </ul>
  </div>
 </div>  
