--- a/CRM1/views/back/manager.ejs
+++ b/CRM1/views/back/manager.ejs
@@ -27,7 +27,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-     West Ham United Foundation Project
+   © 1895 - 2019 West Ham United Football Club
   </ul>
  </div>
 </div>  
