--- a/CRM1/views/back/product_category.ejs
+++ b/CRM1/views/back/product_category.ejs
@@ -3,8 +3,8 @@
 
  <div id="dcMain">
     
-<div id="urHere">Management System<b>></b><strong>Others</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-        <h3><a href="/admin/categoryPAdd" class="actionBtn add">Add New</a>Others</h3>
+<div id="urHere">Management System<b>></b><strong>Customer</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+        <h3><a href="/admin/categoryPAdd" class="actionBtn add">Add New</a>Customer</h3>
         <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
             <tr>
                 <th width="120" align="left">Contact person</th>
@@ -30,7 +30,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-     West Ham United Foundation Project
+    © 1895 - 2019 West Ham United Football Club
   </ul>
  </div>
 </div>  
