--- a/CRM1/views/back/product_categoryAdd.ejs
+++ b/CRM1/views/back/product_categoryAdd.ejs
@@ -2,8 +2,8 @@
 <%- include left_nav.ejs %>
 <div id="dcMain">
     
-<div id="urHere">Management System<b>></b><strong>Others</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
-            <h3><a href="/admin/categoryP" class="actionBtn">Others</a>Add New</h3>
+<div id="urHere">Management System<b>></b><strong>Customer</strong> </div>   <div class="mainBox" style="height:auto!important;height:550px;min-height:550px;">
+            <h3><a href="/admin/categoryP" class="actionBtn">Customer</a>Add New</h3>
     <form action="product_category.php?rec=insert" method="post">
      <table width="100%" border="0" cellpadding="8" cellspacing="0" class="tableBasic">
       <tr>
@@ -47,7 +47,7 @@
  <div id="footer">
   <div class="line"></div>
   <ul>
-  West Ham United Foundation Project
+  
   </ul>
  </div>
 </div>  
